# subplant

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/subplant/: __init__.py  __main__.py  bitrate.py  check.py  extract.py  implant.py  sidecar.py
